--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "next": "14.2.3",
+    "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18"
   },
